--- a/index.html
+++ b/index.html
@@ -6,9 +6,72 @@
 </head>
 <body>
 
-<article class="main">
+<main>
+<article class="content">
+  <h1>Super Epic Tile Layer</h1>
 
-</article>
+  <header>
+  <p><strong>$35</strong></p>
+  <em>(In stock)</em>
+  </header>
+
+  <img src="images/placeholder-4by3.svg" alt="">
+
+    <dl>
+      <dt>Ages:</dt>
+      <dd>8+</dd>
+      <dt>Number players:</dt>
+      <dd>2–5</dd>
+      <dt>Length:</dt>
+      <dd>45 min</dd>
+    </dl>
+
+      <p>Average Rating:</p> <meter min="0" max="5" value="4">4/5</meter>
+
+      <p>[Add to Wishlist!]</p>
+      <p>[Add to Cart]</p>
+
+      <footer class ="first">
+        <p>You’re an ancient Egyptian God competing against the other gods to create the perfect landscape for your subjugated peoples. You and the gods adjust the landscape to best suit your people, building farms, rivers, cities, villages—and places of worship. The god with the best—most loved—landscape wins and claims the whole land.</p>
+        <p>Super Epic Tile Layer is a tile-placement game where players draw a random tile and place the piece to continue the beautiful landscape of the Nile and Nile delta. Each tile must seamlessly continue the landscape while getting victory points by claiming important pieces of countryside and locations.</p>
+      </footer>
+
+      <footer class ="second">
+        <dl>
+          <dt>Status:</dt>
+          <dd>In print</dd>
+          <dt>Categories:</dt>
+          <dd>Area Control, Educational, Historical, Light Strategy, Puzzle, Tile Placement, Worker Placement
+        Publisher: AwesomeSpiel</dd>
+          <dt>Designer:</dt>
+          <dd>Kerstin Eichelberger</dd>
+          <dt>Year:</dt>
+          <dd>2011</dd>
+          <dt>Awards:</dt>
+          <dd>2012 Spiel of the Year Winner, 2012 Golden Pyramid Game Award Winner, 2012 Geek Website Game of the Year Nominee</dd>
+        </dl>
+      </footer>
+
+      <aside class="bottom">
+        <h2>Reviews</h2>
+        <article class="first">
+          <h3>Thomas Schweitzer</h3>
+          <footer>
+           —<date>2012-12-12</date> <meter min="0" max="5" value="4">4/5</meter>
+           </footer>
+          <p>Dieses Spiel ist super super-leichte, aber sehr lustig.</p>
+          </article>
+
+          <article class="second">
+            <h3>Natasha Stevens</h3>
+            <footer>
+             —<date>2012-04-15</date> <meter min="0" max="5" value="5">5/5</meter>
+             </footer>
+            <p>This game is bloody amazing! My mates and I totally love playing it.</p>
+        </article>
+      </aside>
+      </article>
+  </main>
 
 </body>
 </html>
